@@ -2,7 +2,7 @@
 //
 // ImageLib Sources
 // Copyright (C) 2000-2009 by Denton Woods
-// Last modified: 02/11/2009
+// Last modified: 02/19/2009
 //
 // Filename: src-IL/src/il_io.c
 //
